<resources>
    <string name="app_name">EpiAndroid</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This login is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="connection_error">Wrong credentials</string>
    <string name="network_error">Can not access to network</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Profile Fragment-->
    <string name="button_search">Search</string>
    <string name="tv_promo">Promotion</string>
    <string name="tv_credits">Earned credits</string>
    <string name="tv_gpa">G.P.A.</string>
    <string name="tv_netsoul">Netsoul :</string>

    <!--Planning Fragment-->
    <string name="btn_prev_day">&lt;&lt;</string>
    <string name="btn_validate_token">Validate token</string>
    <string name="wrong_token_format">Token is not a token</string>

    <!--DashBoardFragment-->
    <string name="log_time_title">Log time :</string>
    <string name="btn_next_day"><![CDATA[>>]]></string>

    <!--Project Activity-->
    <string name="grade_title">Grade</string>
    <string name="default_grade">-</string>
    <string name="credit_title">Credits</string>
    <string name="default_credit">0</string>
</resources>
