<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jordan.epiandroid.Fragment.ProfileFragment">

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_search_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/b_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_search" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_search"
        android:paddingLeft="@dimen/padding_tv"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_search"
        android:layout_toRightOf="@+id/tv_name"
        android:paddingLeft="@dimen/padding_tv"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:maxHeight="@android:dimen/app_icon_size"
        android:maxWidth="@android:dimen/app_icon_size"
        android:paddingLeft="@dimen/padding_tv" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_promo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:paddingTop="@dimen/padding_tv"
        android:text="@string/tv_promo" />

    <TextView
        android:id="@+id/tv_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_promo_title"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_credits_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_promo"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:paddingTop="@dimen/padding_tv"
        android:text="@string/tv_credits" />

    <TextView
        android:id="@+id/tv_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_credits_title"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_gpa_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_credits"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:paddingTop="@dimen/padding_tv"
        android:text="@string/tv_gpa" />

    <TextView
        android:id="@+id/tv_gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_gpa_title"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_profile_picture"
        android:paddingLeft="@dimen/padding_tv"
        android:textColor="@color/colorBlue" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mail"
        android:paddingLeft="@dimen/padding_tv"
        android:paddingTop="@dimen/padding_tv"
        android:textColor="@color/colorBlue" />

    <TextView
        android:id="@+id/tv_netsoul_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_phone_number"
        android:paddingLeft="@dimen/padding_tv"
        android:paddingTop="@dimen/netsoul_title_padding_top"
        android:text="@string/tv_netsoul" />

    <TextView
        android:id="@+id/tv_netsoul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_netsoul_title"
        android:paddingLeft="@dimen/padding_tv" />

</RelativeLayout>
